--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,13 +4,43 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: rgba(95, 81, 81, 0.87);
   background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+}
+
+/* Reset básico */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* Corregimos el body */
+body {
+  min-height: 100vh;
+  width: 100%;
+  background: linear-gradient(to bottom right, #f8fafc, #e2e8f0);
+  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  color: #f9f9f9;
+  font-family: 'Poppins', sans-serif;
+}
+
+/* El div root ocupa toda la pantalla */
+#root {
+  background-color: #242424;
+  min-height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start; /* O center si querés centrar absolutamente todo */
+  padding: 2rem 1rem;
 }
 
 a {
@@ -22,36 +52,27 @@ a:hover {
   color: #535bf2;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  margin: 10px 0 20px 0;
 }
 
-button {
-  border-radius: 8px;
+.button-primary {
+  border-radius: 20px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  align-items: center;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
+  margin: 15px 0 0 0;
   cursor: pointer;
+  padding: 12px;
   transition: border-color 0.25s;
 }
 button:hover {
   border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
 @media (prefers-color-scheme: light) {
